# econ

./: ML2.cmt  ML2.lst  ML2.tbl  ML2u.eqs  ML2u.scl  ML2u.var  Makefile  intro.html  ml2Init.rep  pc.parms  print.rep  pyproject.toml  restbl1.rep  restbl2.rep  restbl3.rep  simulator.html
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: export.py  instruments.py  simulate.py
data/baseline/: baseline_variables.json  scalars.json
docs/: ML2_VARIABLE_MAPPING.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/dashboard/: IndicatorChart.tsx  SimulationDashboard.tsx
frontend/src/components/instruments/: InstrumentGrid.tsx  InstrumentRow.tsx
frontend/src/components/results/: ExportButtons.tsx  ImpactTable.tsx  LevelTable.tsx  ResultsPanel.tsx
frontend/src/store/: simulationStore.ts
ml2/: __init__.py  engine.py  impact.py  instruments.py  parameters.py  solver.py  state.py  types.py  variables.py
ml2/equations/: __init__.py  base.py  behavioral.py  foreign.py  identities.py  labor.py  prices.py  production.py  public_finance.py  registry.py
ml2_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_engine.py  test_solver.py
